--- a/crashlib/src/main/res/values/styles.xml
+++ b/crashlib/src/main/res/values/styles.xml
@@ -1,11 +1,8 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/status_color</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <!-- Application theme. -->
+    <style name="AppTheme" parent="android:Theme.NoTitleBar">
     </style>
 
 </resources>
