--- a/crashlib/src/main/res/layout/activity_crash_handler_show_exception.xml
+++ b/crashlib/src/main/res/layout/activity_crash_handler_show_exception.xml
@@ -3,12 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f5f6f9"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/colorPrimary"
+        android:background="#FFFFFF"
         android:gravity="center_vertical">
 
         <ImageView
@@ -17,14 +18,14 @@
             android:layout_height="match_parent"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:src="@mipmap/ic_back"/>
+            android:src="@mipmap/ic_crash_handler_lib_back"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="奔溃日志"
-            android:textColor="#FFFFFF"
+            android:textColor="#333333"
             android:textSize="18sp"/>
 
     </RelativeLayout>
