增加可以单独分享奔溃文件到第三方的api； 初始化方法增加是否是debug模式的参数传入

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.sharejoys.crashhandlerlib.MainActivity">
 
     <Button
@@ -12,4 +13,9 @@
         android:layout_height="wrap_content"
         android:text="测试"/>
 
+    <Button
+        android:id="@+id/share_crash_file"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="分享奔溃信息到第三方"/>
 </LinearLayout>
